client/css/app.css
/* ... */
.btn-twitter:hover,
.btn-twitter:focus {
    border-color: #8dc2e4;
    background-color: #cadde9;
}

.btn-twitter:active {
    background: #cadde9;
    -webkit-box-shadow: inset 0 1px 0 #bbd6e7;
    box-shadow: inset 0 1px 0 #bbd6e7;
}

/*
 * Icon
 */

.btn-twitter:before {
    margin: 0 0.6em 0 -0.6em;
    background-position: -22px 0;
}

.btn-twitter.large:before {
    background-position: -36px -22px;
}


.btn-github.large:before {
    background-position: -72px -22px;
}

.btn-github.large:hover:before,
.btn-github.large:focus:before,
.btn-github.large:active:before {
    background-position: -108px -22px;
}


/* Following is to make error boxes look cleaner, 
 * and is from twitter bootstrap.
 * http://twitter.github.com/bootstrap/
 */

.alert-message.error {
  background-color: #c43c35;
  background-repeat: repeat-x;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#ee5f5b), to(#c43c35));
  background-image: -moz-linear-gradient(top, #ee5f5b, #c43c35);
  background-image: -ms-linear-gradient(top, #ee5f5b, #c43c35);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ee5f5b), color-stop(100%, #c43c35));
  background-image: -webkit-linear-gradient(top, #ee5f5b, #c43c35);
  background-image: -o-linear-gradient(top, #ee5f5b, #c43c35);
  background-image: linear-gradient(top, #ee5f5b, #c43c35);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ee5f5b', endColorstr='#c43c35', GradientType=0);
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  border-color: #c43c35 #c43c35 #882a25;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
}

.alert-message {
  position: relative;
  padding: 7px 15px;
  margin-bottom: 18px;
  color: #404040;
  background-color: #eedc94;
  background-repeat: repeat-x;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#fceec1), to(#eedc94));
  background-image: -moz-linear-gradient(top, #fceec1, #eedc94);
  background-image: -ms-linear-gradient(top, #fceec1, #eedc94);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fceec1), color-stop(100%, #eedc94));
  background-image: -webkit-linear-gradient(top, #fceec1, #eedc94);
  background-image: -o-linear-gradient(top, #fceec1, #eedc94);
  background-image: linear-gradient(top, #fceec1, #eedc94);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fceec1', endColorstr='#eedc94', GradientType=0);
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  border-color: #eedc94 #eedc94 #e4c652;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
  border-width: 1px;
  border-style: solid;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
}

.close {
  float: right;
  color: #000000;
  font-size: 20px;
  font-weight: bold;
  line-height: 13.5px;
  text-shadow: 0 1px 0 #ffffff;
  filter: alpha(opacity=25);
  -khtml-opacity: 0.25;
  -moz-opacity: 0.25;
  opacity: 0.25;
}

.close:hover {
  color: #000000;
  text-decoration: none;
  filter: alpha(opacity=40);
  -khtml-opacity: 0.4;
  -moz-opacity: 0.4;
  opacity: 0.4;
}

.alert-message .close {
  font-family: Arial, sans-serif;
  line-height: 12px;
}

.alert-message .close {
  margin-top: 1px;
}


/* alert-message styles */
#error {
  display: none;
  position: fixed;
  left: 20%;
  right: 20%;
  top: 0%;
  height: 40px;
  z-index: 400;
}

.alert-message.error {
  position: absolute;
  left: 34%;
  right: 34%;
  z-index: 401;
}

.alert-message.error p {
  line-height: 1em;
  margin-bottom: 0px;
  text-align: center;
  font-weight: bold;
  font-family: "museo-slab", "American Typewriter", "serif";
  font-size: 14px;
  color: #D0D0D0;
}

